<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Apk Downloader</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    
    <string name="activity_preferences_title">Preferences</string>
    <string name="activity_help_title">Help</string>
    
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string name="pref_auth_title">Authentication</string>
    <string name="pref_email_key" translatable="false">email</string>
    <string name="pref_email_title">Email</string>
    <string name="pref_email_default" />
    <string name="pref_email_summary">Your google login email address (leave blank if using OAuth)</string>
    <string name="pref_password_key" translatable="false">password</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_password_default" />
    <string name="pref_password_summary">Your google login password</string>
    <string name="pref_gsfid_key" translatable="false">gsfid</string>
    <string name="pref_gsfid_title">Google services framework ID</string>
    <string name="pref_gsfid_default" />
    <string name="pref_gsfid_summary">Google services framework ID (needs to be entered manually if you do not have google services installed, ignore otherwise)</string>
    
    <string name="pref_options_title">Options</string>
    <string name="pref_autoinstall_key" translatable="false">autoinstall</string>
    <string name="pref_autoinstall_title">Auto install apps</string>
    <string name="pref_autoinstall_default">false</string>
    <string name="pref_autoinstall_summary">Automatically install apps once they\'ve been downloaded</string>
    
    <string name="pref_device_title">Device</string>
    <string name="pref_device_summary">This is the device information that will be used to make the download request</string>
    <string name="pref_sdk_version_key" translatable="false">sdk_version</string>
    <string name="pref_sdk_version_title">SDK version</string>
    <string name="pref_sdk_version_default">8013013</string>
    <string name="pref_sdk_version_summary">SDK build version of device</string>
    <string name="pref_device_and_sdk_version_key" translatable="false">device_and_sdk_version</string>
    <string name="pref_device_and_sdk_version_title">Device and SDK version</string>
    <string name="pref_device_and_sdk_version_default">Mako:18</string>
    <string name="pref_device_and_sdk_version_summary">Device name and sdk version</string>
    <string name="pref_operator_key" translatable="false">operator</string>
    <string name="pref_operator_title">Network operator</string>
    <string name="pref_operator_default">T-Mobile</string>
    <string name="pref_operator_summary">Network operator of device</string>
    <string name="pref_operator_numeric_key" translatable="false">operator_numeric</string>
    <string name="pref_operator_numeric_title">Network operator code</string>
    <string name="pref_operator_numeric_default">31020</string>
    <string name="pref_operator_numeric_summary">Network operator numeric code</string>
    <string name="pref_locale_key" translatable="false">locale</string>
    <string name="pref_locale_title">Locale</string>
    <string name="pref_locale_default">en</string>
    <string name="pref_locale_summary">Locale</string>
    <string name="pref_country_key" translatable="false">country</string>
    <string name="pref_country_title">Country</string>
    <string name="pref_country_default">us</string>
    <string name="pref_country_summary">Country</string>
    <string name="pref_device_reset_key">device_reset</string>
    <string name="pref_device_reset_title">Reset device settings</string>
    <string name="pref_device_reset_summary">Revert the device settings back to defaults</string>
    
    <string name="error_unrecognized_login">%1$s - please enter valid credentials in settings</string>
    <string name="error_api_exception">Api exception: %s</string>
    <string name="error_empty_id">Please enter a valid application ID</string>
    <string name="error_no_connection">No connection</string>
    
    <string name="app_package">Package:</string>
    <string name="download">Get</string>
    <string name="downloads">Downloads</string>
    <string name="app_downloading">Downloading app...</string>
    <string name="device_prefs_reset">Preferences reset</string>
    <string name="update_manifest" translatable="false">https://raw.githubusercontent.com/jackpf/ApkDownloader/release/AndroidManifest.xml</string>
    <string name="update_apk" translatable="false">https://github.com/jackpf/ApkDownloader/blob/release/bin/ApkDownloader.apk?raw=true</string>
    <string name="update_title">New update available!</string>
    <string name="update_text">Version %1$s -> %2$s</string>
    
    <string name="admob_id" translatable="false">ca-app-pub-9822609068892864/1050163502</string>
	
</resources>
